# vqvae-from-scratch

./: .gitignore  README.md  TODO.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml  experiment.yaml
conf/callbacks/: callbacks.yaml
conf/datamodule/: datamodule.yaml
conf/dataset/: dataset.yaml
conf/hydra/: default.yaml
conf/logger/: logger.yaml
conf/model/: model.yaml
conf/nn/data/: default.yaml
conf/nn/data/dataset/vision/: mnist.yaml
conf/nn/module/: default.yaml
conf/nn/module/model/: cnn.yaml
conf/pl/: pl.yaml
conf/train/: train.yaml
conf/trainer/: trainer.yaml
docs/: index.md
src/vqvae/: main.py  quiet.py  run.py
src/vqvae/data/: datamodule.py  dataset.py
src/vqvae/modules/: module.py
src/vqvae/outputs/2025-07-17/15-26-05/.hydra/: config.yaml  hydra.yaml
src/vqvae/pl_modules/: pl_module.py
src/vqvae/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_configuration.py  test_datamodule.py  test_dataset.py  test_discriminator.py  test_model.py  test_pl_module.py  test_resume.py
